2010-03-11  Karl Berry  <karl@gnu.org>

	* tex4ht-c.tex: license notices.
	* Makefile: add derivations.

2010-03-08  Karl Berry  <karl@gnu.org>

	* tex4ht-cond4ht.tex: license notices.
	* mktex4ht.cnf: new (empty) file, needed to run cond4ht.
	* Makefile: add derivations.
	* tex4ht-cpright.tex: note additional copy.
	* all files: no period ending copyright lines, I guess.

2010-03-08  Karl Berry  <karl@gnu.org>

	* tex4ht-docbook-xtpipes.tex: license notices.
	* Makefile: add derivations.

2010-03-07  Karl Berry  <karl@gnu.org>

	* tex4ht-docbook.tex: license notices.
	* Makefile: add derivations.

2010-03-06  Karl Berry  <karl@gnu.org>

	* tex4ht-env.tex: license notices.
	(dvips convert (personal)): do not hardcode path to convert
	(else zztex4ht-env.ps is left behind).
	* Makefile: add derivations.

2010-03-05  Karl Berry  <karl@gnu.org>

	* tex4ht-fonts-noncjk.tex: start at license notices.
	Correct quoting of the
	\Needs{"xhlatex tex4ht-fonts-4hf ..."} line.
	* Makefile: start at derivations.

2010-03-04  Radhakrishnan CV  <cvr@river-valley.org>

	* tex4ht-mkht.tex (<MYcopyrightnotice): new macro; insert
	notice in all generated scripts.

2010-03-04  Karl Berry  <karl@gnu.org>

	* tex4ht-htcmd.tex: update license notices.
	* Makefile: add derivations.

2010-03-03  Karl Berry  <karl@gnu.org>

	* tex4ht-html-speech-xtpipes.tex: update license notices.
	* Makefile: add derivations.

2010-03-02  Karl Berry  <karl@gnu.org>

	* tex4ht-html-speech.tex,
	* tex4ht-html0.tex: update license notices.
	* Makefile: add derivations.

2010-02-28  Karl Berry  <karl@gnu.org>

	* tex4ht-html32.tex,
	* tex4ht-html4.tex: update license notices.
	* Makefile: add derivations.

2010-02-26  Karl Berry  <karl@gnu.org>

	* tex4ht-info-mml.tex,
	* tex4ht-info-ooffice.tex: update license notices.
	* Makefile: add derivations.

2010-02-25  Karl Berry  <karl@gnu.org>

	* tex4ht-info-svg.tex,
	* tex4ht-javahelp-xtpipes.tex: update license notices.
	* Makefile: add derivations.
