@@ -1,4 +1,5 @@
 lm-htf.tex
+tex4ht.dir
 tex4ht.env
 tex4ht.env-unix
 tex4ht.env-win32
